--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,14 @@ default: &defaultJob
   # The docker image all jobs that inherit from us will have (Which should be all of them)
   docker:
       - image: circleci/android:api-28
-
 ##
 # We define a job for building. This job will be in charge of running:
+# - Install mobile-cd build automation: 'kelli'
 # - Run code analysis for a specific module
 # - Run tests for a specific module
 # - Run an assemble for a specific module
+# - Run a build analysis for a specific module
+# - Specifying a place for storing artifacts and test results.
 ##
 build-job: &buildJob
   # It will inherit the defaultJob.
@@ -21,24 +23,28 @@ build-job: &buildJob
       # Checkout to our repo and add the ssh keys for doing git stuff
       - checkout
       - add_ssh_keys
+      # Restore the cache if a hashed build.gradle is found as key
       - restore_cache:
           key: buildscript-{{ checksum "build.gradle" }}
       - restore_cache:
           key: gradlew-{{ checksum "./gradle/wrapper/gradle-wrapper.properties" }}
       - restore_cache:
-          key: dependencies-{{ checksum "exampleApp/build.gradle" }}-{{ checksum "ui/build.gradle" }}-{{ checksum "ui_legacy/build.gradle" }}
+          key: dependencies-{{ checksum "app/build.gradle" }}
+      - run:
+          name: Install Mobile Requirements
+          command: eval $GET_MOBILE_CD | ruby
       - run:
           name: Run Code Analysis
-          command: ./gradlew $MODULE:check -x test
+          command: kelli code-analyzer --module $MODULE
       - run:
           name: Run Tests
-          command: |
-            ./gradlew $MODULE:testReleaseUnitTest
-            ./gradlew $MODULE:jacocoTestReleaseUnitTestReport
-            bash <(curl -s https://codecov.io/bash) -t $CODECOV_REPO_TOKEN
+          command: kelli test --module $MODULE
       - run:
           name: Run Assemble
-          command: ./gradlew $MODULE:assembleRelease
+          command: kelli assemble --module $MODULE
+      - run:
+          name: Run Build Analysis
+          command: kelli build-analyzer --module $MODULE
       # Save the cache for this build.gradle
       - save_cache:
           paths:
@@ -52,10 +58,15 @@ build-job: &buildJob
           paths:
           - ./.gradle
           - ~/.android/build-cache/
-          key: dependencies-{{ checksum "exampleApp/build.gradle" }}-{{ checksum "ui/build.gradle" }}-{{ checksum "ui_legacy/build.gradle" }}
+          key: dependencies-{{ checksum "app/build.gradle" }}
+      # Setup store paths, everything inside $CI_ARTIFACTS_DIR will be uploaded.
+      # Since 2.0 still doesnt support envvars in store_artifacts, we use its value directly....
+      - store_artifacts:
+          path: "mobile-cd/artifacts"
 ##
 # We define a job for deploying. This job will be in charge of running:
-# - Run deploy of a lib as release
+# - Install mobile-cd build automation: 'kelli'
+# - Run deploy of a lib | application as release
 ##
 deploy-release-job: &deployReleaseJob
   <<: *defaultJob
@@ -64,8 +75,12 @@ deploy-release-job: &deployReleaseJob
       - checkout
       - add_ssh_keys
       - run:
+          name: Install Mobile Requirements
+          command: eval $GET_MOBILE_CD | ruby
+      - run:
           name: Run Deploy
-          command: ./gradlew assemble bintrayUpload --no-build-cache --rerun-tasks
+          command: kelli deploy lib --release
+
 ##
 # We define our default workflow
 # This workflow will be used by our default builds
@@ -77,11 +92,7 @@ default-workflow: &defaultWorkflow
       ignore:
         - master
         - /release\/.*$/
-deploy-release-workflow: &deployReleaseWorkflow
-  filters:
-    branches:
-      only:
-        - /release\/.*$/
+
 ##
 # Create our jobs, making them inherit from the defined jobs
 # The ones that will inherit from buildJob need to create the environment variable
@@ -89,20 +100,13 @@ deploy-release-workflow: &deployReleaseWorkflow
 ##
 version: 2
 jobs:
-  ui:
+  app:
     <<: *buildJob
     environment:
-      MODULE: ui
-  ui_legacy:
-    <<: *buildJob
-    environment:
-      MODULE: ui_legacy
-  exampleApp:
-    <<: *buildJob
-    environment:
-      MODULE: exampleApp
-  deploy:
+      MODULE: app
+  build: # Do NOT rename this "build" job because Circle CI expects this name.
     <<: *deployReleaseJob
+
 ##
 # We define here workflows. We will add all our jobs
 # to a common workflow, and for each job of the workflow we will make it
@@ -112,11 +116,5 @@ workflows:
   version: 2
   build-test-deploy:
     jobs:
-      - ui:
+      - app:
           <<: *defaultWorkflow
-      - ui_legacy:
-          <<: *defaultWorkflow
-      - exampleApp:
-          <<: *defaultWorkflow
-      - deploy:
-          <<: *deployReleaseWorkflow
