Changelog plus dependencies bump

--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -42,7 +42,7 @@ android {
 dependencies {
     implementation project(":ui_legacy")
     implementation "com.google.android.material:material:$materialVersion"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
 
     api "com.facebook.fresco:fresco:$frescoVersion"
     api "com.facebook.fresco:webpsupport:$frescoVersion"
